--- a/src/styles/appartement.css
+++ b/src/styles/appartement.css
@@ -80,6 +80,7 @@ p {
   width: 16vw;
   align-self: center;
   background-color: #2E8B57 !important;
+  color: white;
   padding: 10px 15px;
   border-radius: 10px;
   border: none;
